<resources>

    <string name="app_name">Infinit</string>
    <string name="action_search">Search</string>

    <!-- MENU -->
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">Token Wallet</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_account">Account</string>
    <string name="menu_send">Send</string>
    <string name="menu_receive">Receive</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="menu_logout">Logout</string>

    <string name="toolbar_menu_save">Save</string>
    <!-- END MENU -->

    <!-- REGISTER -->
    <string name="label.name">Name</string>
    <string name="label.country_code">Telephone country code</string>
    <string name="label.telephone_number">Telephone number</string>
    <string name="label.next">Next</string>
    <string name="label.login">Already have an account? Log in here!</string>
    <string name="label.register">Don\'t have an account? Register here!</string>
    <string name="label.username">User name</string>
    <string name="label.type_username">Type your user name</string>
    <string name="message.sms_validation">We have sent you a SMS message.\nPlease type the confirmation number shown.
    </string>
    <string name="message.create_password">Create new password.</string>
    <string name="message.confirm_current_password">Confirm password.</string>
    <string name="message.confirm_new_password">Confirm password.</string>

    <!-- REGISTER ERRORS -->
    <string name="error.sms_code_error">The SMS code does not match</string>
    <string name="error.passwor_not_valid">Passwords is not valid</string>
    <string name="error.password_change_error">There was an error changing the password</string>
    <string name="error.login_error">Wrong username or password</string>
    <string name="error.username_exists">This username already exists, try again</string>
    <string name="error.password_empty">Password must have 6 digits</string>
    <string name="error.username_empty">The user name can\'t be empty</string>
    <string name="error.register">Register error</string>
    <string name="error.required_field">Required field</string>
    <string name="error.wrong_format">Wrong format</string>
    <!-- END REGISTER -->

    <!-- LOGIN -->
    <string name="message.login">Log in.</string>
    <string name="message.confirm_password">Confirm your password.</string>
    <!-- END LOGIN -->

    <!-- HOME -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- END HOME -->

    <!-- ACCOUNT -->
    <string name="title_account">Account</string>
    <!-- END ACCOUNT -->

    <!-- ADD TOKEN -->
    <string name="title_add_token">Add new token</string>
    <string name="hint_contract">Smart Contract Details</string>
    <string name="hint_name">Token Name</string>
    <string name="hint_symbol">Token Symbol</string>
    <string name="hint_total">Decimals</string>
    <string name="label_add_token">Add Token</string>

    <string name="error_contract_empty">Smart Contract Details can\'t be empty</string>
    <string name="error_name_empty">Token name can\'t be empty</string>
    <string name="error_token_symbol">Token Symbol can\'t be empty</string>
    <string name="error_value_empty">Decimals can\'t be empty</string>
    <string name="error_wrong_request">Wrong data</string>
    <!-- END ADD TOKEN -->

    <!-- TRANSACTION DETAILS-->
    <string name="title_transaction_details">Transaction details</string>
    <string name="label_transaction_wallet_address">Beneficiary wallet address: %1$s</string>
    <string name="label_transaction_amount_symbol">Amount &amp; symbol: %1$s</string>
    <string name="label_transaction_message">Message: %1$s</string>
    <string name="label_transaction_status">Status: %1$s</string>
    <string name="label_transaction_confirmations">Number of confirmations: %1$s</string>
    <string name="label_transaction_hash">Transaction Hash: %1$s</string>

    <!-- RECEIVE -->
    <string name="title_receive">Receive</string>
    <string name="label.info_public_address">Public Address:</string>
    <!-- END RECEIVE -->

    <!-- SUPPORT -->
    <string name="title_support">Support</string>
    <string name="label.support_info">Welcome to Infinit\'s Support.\nPlease tap on the button below to start a
        conversation with our support team
    </string>
    <string name="label.open_messenger">Open Messenger</string>
    <!-- SUPPORT -->

    <!-- SETTINGS -->
    <string name="title_settings">Settings</string>
    <string name="label.wallet_settings">Wallet settings</string>
    <string name="label.password">Password</string>
    <string name="label.private_keys">Private keys</string>
    <string name="label.gas_price">Gas Price</string>
    <string name="label.gas_limit">Gas Limit</string>
    <string name="label.private_key">Private Key</string>

    <string name="label.app">App</string>
    <string name="label.about_us">About us</string>
    <string name="label.rates_us">Rate us</string>
    <string name="label.info">Info</string>

    <string name="label.gwei">Gwei</string>
    <string name="label.gas_price_description">The higher you set the GAS Price, the faster transaction will be exectued.
        If you want to spend less on a transaction,
        you can do so lowering the amount you pay per unit of gas.</string>

    <string name="hint_gas_limit">Set Gas Limit</string>
    <string name="label.gas_limit_description">The gas limit is the maximum amount of units of gas you are willing to spend on a transaction. All unused gas is refunded to you at the end of a transaction.
        \n\n21,000 is the gas limit for standard transactions.
        \n\n1,000,000,000 Gwei = 1 ETH</string>
    <string name="error_gas_limit_empty">Gas Limit can\'t be empty</string>

    <string name="message_password_changed">The password was changed</string>
    <string name="message_gas_price_changed">Gras price was changed</string>
    <string name="message_gas_limit_changed">Gas limit was changed</string>
    <string name="error_gas_limit_exceeded">Gas Limit can\'t exceed 21.000</string>

    <string name="label_your_private_key">Your Private Key</string>

    <!-- SELECT CONTACT-->
    <string name="title_select_contact">Select beneficiary</string>
    <string name="item_empty_contact">Not in my contact list</string>
    <string name="error_beneficiary_empty">The beneficiary can\'t be empty</string>
    <string name="error.contacts_permission">Read contacts permission necessary</string>

    <string name="title_manually">Manually</string>
    <string name="title_scan_qr">Scan QR Code</string>
    <!-- END SELECT CONTACT -->

    <!-- SET ADDRESS -->
    <string name="title_set_address">Set Address</string>
    <string name="label.type_beneficiary_address">Type the beneficiary address: 0x…</string>
    <!-- END SET ADDRESS -->

    <!-- SEND AMOUNT -->
    <string name="title_send_amount">Amount &amp; Asset</string>
    <string name="hint_amount">Amount</string>
    <string name="available_amount">Available balance: %1$s</string>
    <string name="not_enough">Not enough amount of the selected token</string>
    <!-- END SEND AMOUNT -->

    <!-- SEND MESSAGE -->
    <string name="title_send_message">Message</string>
    <string name="hint_message">Message i.e: "ICO Contribution"</string>
    <!-- END SEND MESSAGE -->

    <!-- CONFIRM TRANSACTION -->
    <string name="title_confirm_transaction">Confirm Transaction</string>
    <string name="label.ready_to_send">Ready to send</string>
    <string name="label.to">To</string>
    <string name="label.careful">Careful!</string>
    <string name="label.check_information">Please bear in mind that transactions in Blockchain are irreversible.
        Double-check that all the information is correct.
    </string>
    <string name="label.send">Send</string>
    <!-- END CONFIRM TRANSACTION -->

    <!-- PROCESS TRANSACTION -->
    <string name="title_process_transaction">Processing…</string>
    <string name="label.processing">We are processing the payment request. Please wait until confirmation.</string>
    <string name="error_transaction">There was an error in the transaction</string>
    <!-- END PROCESS TRANSACTION -->

    <!--TRANSACTION SUBMITTED -->
    <string name="label.you_rock">You rock!</string>
    <string name="label.transaction_submitted">Transation request submitted</string>
    <!--END TRANSACTION SUBMITTED -->

    <string name="copied_to_clipboard">Copied to clipboard</string>

    <string name="link_about_us">https://drive.google.com/file/d/15XW4Vuqlb-jM4WZVdsHiBQGBgYY3yJFh/view?usp=sharing</string>
    <string name="link_terms_of_service">https://drive.google.com/file/d/1IwysbLq-8SeuvS6bt9Y_-KfiVBw0d5jN/view?usp=sharing</string>
    <string name="link_privacy_policy">https://drive.google.com/file/d/1rXNnYRxJPldrAfi-rJ1rbcVY155hC8ct/view?usp=sharing</string>
    <string name="link_website">https://play.google.com</string>

    <string name="terms_and_conditions">Terms and conditions</string>
</resources>
